Bug 442770 - The window opening / closing "Glide" effect is broken in Plasma 5.23 beta
Summary: The window opening / closing "Glide" effect is broken in Plasma 5.23 beta
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 5.22.90
Platform: Other Linux
: HI normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-09-21 09:45 UTC by tromzy
Modified: 2021-09-21 18:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description tromzy 2021-09-21 09:45:35 UTC
SUMMARY
On Plasma 5.23 beta, the window opening and closing effect called "Slide" (not sure about the name in english) is kind of broken. The other opening / closing effect called "Scale" (not sure about the name) works fine. Tested on Wayland.

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.22.90
KDE Frameworks Version: 5.86
Qt Version: 5.15.2

ADDITIONAL INFORMATION
Comment 1 Vlad Zahorodnii 2021-09-21 11:05:55 UTC
Can confirm.
Comment 2 Bug Janitor Service 2021-09-21 11:43:29 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/1444
Comment 3 Vlad Zahorodnii 2021-09-21 12:20:36 UTC
Git commit c29c437e580026696d63aa82f083b020cb7c13b8 by Vlad Zahorodnii.
Committed on 21/09/2021 at 12:20.
Pushed by vladz into branch 'master'.

effects/glide: Adjust the effect to projection matrix changes

With per-screen rendering, the projection matrix is no longer created
with the workspace geometry, i.e. all screen geometries united, so the
center of the workspace geometry may not map to (0, 0) in the clip
coordinates.

GLRenderTarget::virtualScreenGeometry() can be used to query the rect
that was used to create the projection matrix.

M  +2    -1    src/effects/glide/glide.cpp

https://invent.kde.org/plasma/kwin/commit/c29c437e580026696d63aa82f083b020cb7c13b8
Comment 4 Vlad Zahorodnii 2021-09-21 12:21:03 UTC
Git commit 63eccbb6abbebd8112197eb0e6678aa2c5e34707 by Vlad Zahorodnii.
Committed on 21/09/2021 at 12:21.
Pushed by vladz into branch 'Plasma/5.23'.

effects/glide: Adjust the effect to projection matrix changes

With per-screen rendering, the projection matrix is no longer created
with the workspace geometry, i.e. all screen geometries united, so the
center of the workspace geometry may not map to (0, 0) in the clip
coordinates.

GLRenderTarget::virtualScreenGeometry() can be used to query the rect
that was used to create the projection matrix.


(cherry picked from commit c29c437e580026696d63aa82f083b020cb7c13b8)

M  +2    -1    src/effects/glide/glide.cpp

https://invent.kde.org/plasma/kwin/commit/63eccbb6abbebd8112197eb0e6678aa2c5e34707